--- a/soco-backend-service/pyproject.toml
+++ b/soco-backend-service/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "black (>=25.1.0,<26.0.0)",
     "isort (>=6.0.1,<7.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
+    "pytest (>=8.4.1,<9.0.0)",
+    "pytest-django (>=4.11.1,<5.0.0)",
 ]
 
 [tool.poetry]
