add HomePage && AllMovie Page && PageDetail && fix dockerFile back-service

--- a/soco-backend-service/Dockerfile
+++ b/soco-backend-service/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3.12-slim
 
 ENV POETRY_VERSION=2.1.0 \
-    POETRY_VIRTUALENVS_CREATE=false \
     PYTHONUNBUFFERED=1
 
 WORKDIR /app
@@ -9,10 +8,8 @@ WORKDIR /app
 COPY pyproject.toml poetry.lock ./
 
 RUN pip install --no-cache-dir "poetry==$POETRY_VERSION" \
-    && poetry env activate \
-    && poetry lock \
-    && poetry install --no-root
-
+ && poetry config virtualenvs.create false \
+ && poetry install --no-root
 COPY . .
 
 EXPOSE 8000
