--- a/soco-backend-service/pyproject.toml
+++ b/soco-backend-service/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-dotenv (>=1.1.0,<2.0.0)",
     "pytest (>=8.4.1,<9.0.0)",
     "pytest-django (>=4.11.1,<5.0.0)",
+    "django-cors-headers (>=4.7.0,<5.0.0)",
 ]
 
 [tool.poetry]
