--- a/web-service/package.json
+++ b/web-service/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"**/*.{js,ts,vue,css,scss,json,md}\""
   },
   "dependencies": {
     "pinia": "^3.0.3",
-    "sass": "^1.89.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1",
-    "vuetify": "^3.8.9"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.3.5"
+    "prettier": "^3.5.3",
+    "sass": "^1.89.2",
+    "vite": "^6.3.5",
+    "vite-plugin-vuetify": "^2.1.1",
+    "vuetify": "^3.8.9"
   }
 }
