--- a/web-service/Dockerfile
+++ b/web-service/Dockerfile
@@ -1,7 +1,13 @@
+# Étape 1 : build de l'application
 FROM node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
-EXPOSE 5173
-CMD ["npm", "run", "dev"]
+RUN npm run build
+
+# Étape 2 : serveur statique pour servir le build
+FROM nginx:stable-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
